--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "aws-amplify": "^4.3.16",
     "aws-sdk": "^2.1101.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.10",
+    "ngx-spinner": "^13.1.1",
     "rxjs": "~7.4.0",
     "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.3.0",
@@ -40,7 +42,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.3",
+    "@angular-devkit/build-angular": "^13.3.0",
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
